--- a/天气/weather.css
+++ b/天气/weather.css
@@ -4,23 +4,24 @@
     box-sizing: border-box;
 }
 body{
-    background-color: #de9aef;
+    background-color:#9f66c380;
 }
 .weather-wrapper{
-    max-width: 700px;
+    max-width:1000px;
     margin: 0 auto;
 }
 .weather-picture{
     width:100%;
-    height:230px;
-    background-image: url('img/bb.png');
+    height:400px;
+    background-image: url('img/bbb.gif');
+    background-position:0 -200px;
     background-repeat:no-repeat;
     background-size:cover;
     position: relative;
 }
 .weather-show{
     width: 100%;
-    height:150px;
+    height:200px;
     background-color:#7a30a980;
     color: #fff;
     border-top: 2px solid rgb(201, 106, 230);
@@ -37,9 +38,9 @@ body{
     color: #fff;
     font-size: 20px;    
 }
-::-moz-placeholder { color: rgb(228, 233, 238); }
-::-webkit-input-placeholder {color: rgb(228, 233, 238);}
-:-ms-input-placeholder {color: rgb(228, 233, 238);}
+::-moz-placeholder {color: rgb(185, 197, 209);}
+::-webkit-input-placeholder {color: rgb(185, 197, 209);}
+:-ms-input-placeholder {color: rgb(185, 197, 209);}
 .user-location{
     position: absolute;
     top: 30px;
@@ -48,17 +49,19 @@ body{
     text-align: center;
 }
 .loaction-icon>img{
-    width:40px;
+    width:80px;
 }
 .location-name{
     margin:10px 0;
+    font-size: 30px;
 }
 .today-weather{
     width:40%;
     height:100%;
     float: left;
     padding-left: 18px;
-
+    font-size: 20px;
+    font-weight: bold;
 }
 .today-weather .left{
     float: left;
@@ -95,11 +98,12 @@ body{
 .wind1 img{
     width:20px;
 }
-
 .future-weather{
     float: right;
     width:60%;
     height: 100%;
+    font-size: 20px;
+    font-weight: bold;
 }
 .future-weather ul{
     list-style: none;
@@ -115,39 +119,75 @@ body{
 .future-weather ul>li div{
     margin-top:6px; 
 }
-
 .future-weather ul>li img{
-    width:40px;
+    width:80px;
 }
-@media(max-width:700px){
-    .today-date {
-    text-align: center;
-    font-size: 13px;
+.author{
+    color: #fff;
+  text-align: center;
+  margin-top: 15px
+}
+@media(max-width:425px){
+  .weather-wrapper .weather-picture{
+        width:100%;
+        height:350px;
+        background-image: url('img/bbb.gif');
+        background-position:center;
+        background-repeat:no-repeat;
+        background-size:cover;
+        position: relative;
     }
-    .left .tempt {
-    font-size: 28px;
-    margin-top: 10px;
+    .today-weather{
+        width:40%;
+        height:100%;
+        float: left;
+        padding-left:0px;
+        font-size: 20px;
+        font-weight: bold;
+    }
+    .today-weather .left{
+        float: left;
+        width:50%;  
+        height: 100%;
+        text-align: center; 
+        margin-left:0px;
+        padding-top:0px;
+    }
+  
+    .left .weekday{
+      padding-top: 10px;
+      margin-bottom:30px;
+    }
+    .left .tempt{
+        font-size:20px;
+        margin-top:36px;
+    }
+    .today-date{
+        text-align: center;
+    }
+    .today-weather .right{
+        float:right;
+        width:80px;
+        height: 100%;
+        text-align: center;
+    }
+    .weather-status1{
+        margin-top: -13px;
+        margin-bottom:23px;
+    }
+    .weather-icon img{
+        width:90%;
+        margin-bottom:20px;
+    }
+    .wind1 img{
+        width:20px;
+    }
 }
-.weather-icon img {
-    width:58%;
-    margin-bottom: 10px;
-}
-.today-weather {
-    width:50%;
-    height: 100%;
-    float: left;
-    padding-left:0;
-}
-.future-weather {
-    float: right;
-    width: 50%;
-    height: 100%;
-}
-.today-weather .right {
-    float: left;
-    width: 70px;
-    height: 100%;
-    text-align: center;
-    margin-top: 18px;
-}
+@media(max-width:375px){
+    .today-weather .right{
+        float:right;
+        width:72px;
+        height: 100%;
+        text-align: center;
+    }
 }
